# ChatGPT-Discord-BOT

./: conversation_history.json  pyproject.toml
src/: .env  run.py
src/discord_api/: discord_client.py
src/openai_api/: openapi_connector.py
